--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
+    "compressorjs": "^1.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
+    "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "sharp": "^0.32.4"
   }
 }
